style.css
/* Text Styles ------------------------------- */

* {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box
}

h1 {
  /* background-color: red; */
  font-size: 8vw;
  line-height: 1.1;
  line-break: auto;
  font-family: 'Inter';
  font-weight: normal;
  font-style: normal;
  color: #042082;
  padding-bottom: 2%;
  text-rendering: optimizeLegibility;
  -webkit-font-feature-settings: "kern"1;
  white-space: nowrap;
}

h2 {
  font-family: 'inter';
  font-weight: 400;
  color: #042082;
  text-rendering: optimizeLegibility;
  -webkit-font-feature-settings: "kern"1;
  display: block;
  font-size: 2em;
  margin-block-start: 0.83em;
  margin-block-end: 0.83em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
}

h3 {
  font-size: 1.5rem;
  font-family: 'inter';
  color: #042082;
  margin-block-start: 1em;
  margin-block-end: .2em;
  text-rendering: optimizeLegibility;
  -webkit-font-feature-settings: "kern"1;
}

span {
  margin-bottom: 12px;
}

body {
  background-color: #fafafa;
  padding: 0;
  margin: 0;
  color: #042082;
  font-family: 'inter';
  font-size: 1rem
}


p {
  color: 042082;
  font-size: 1.5rem;
  font-family: 'inter';
  color: #4F61A5;
  line-height: 2.6rem;
  margin-block-start: .5em;
  margin-block-end: .5em;
}

.foliodescription {
  color: #65719B;
  font-size: 1.2rem;
  line-height: 1.5rem;
  font-family: 'Inter';
  margin-block-end: .1rem;
}

.foliodescription span {
  color: #042082;
}

.numbers {
  font-size: 1rem;
  font-family: 'Inter';
  text-rendering: optimizeLegibility;
}

.subhead {
  font-size: 1.5rem;
  font-family: 'inter';
  color: #042082;
  text-decoration: none;
  border-bottom: none;
  margin-block-start: .1em;
  margin-block-end: .1em;
}

.headertext {
  color: #042082;
  font-family: 'inter';
  font-size: 1.5rem;
  line-height: 2.6rem;
}



header .nolinelink {
  margin-left: 4rem;
}


#contact-section a {
  margin-right: 5%;

}

/* Link Styles ------------------------------- */


a {
  font-size: 1.5rem;
  font-family: 'inter';
  color: #4F61A5;
  line-height: 2.6rem;
}

a:link {
  font-size: 1.5rem;
  text-decoration: none;
  border-bottom: 2px solid;
  border-color: #CECDD2;
}

/* visited link */
a:visited {
  color: #4F61A5;
  border-color: #CECDD2;
}

a:hover {
  border-color: #CECDD2;
  text-decoration: line-through;
  border-bottom: none;
  color: #CECDD2;
}


a.NoLineLink {
  font-size: 1.5rem;
  text-decoration: none;
  padding-bottom: 3px;
  color: #4F61A5;
}


a.NoLineLink:link {
  text-decoration: none;
  padding-bottom: 3px;
  color: #4F61A5;
  border-bottom: none;
}

a.NoLineLink:hover {
  color: #042082;
  transition: color 0.2s ease-in-out 0s;
}


.subhead {
  text-decoration: none;
  border-bottom: none;
}

.subhead:link {
  text-decoration: none;
  border-bottom: none;
}



a.headertext {
  border-bottom: none;
}

a.NolineLink2{
  display: none;  
  visibility: hidden;
}

.photo {
  transition: all .2s ease-in-out;
  position: relative;
  width: 682px;
  height: 500px;

}

.project-link {
  position: relative;
  margin-right: auto;

}

.project-link:nth-child(2n) {
  margin-left: auto;
  margin-right: 0;
}



.project-link:hover .imgsection>.photo {
  text-decoration: none;
  opacity: 0.8;
}


.project-link:hover .imgsection>.subhead {
  color: #828CB1;
  text-decoration: none;
}

a.project-link {
  border: none;
  text-decoration: none;
}

a.project-link:visited {
  border: none;
  text-decoration: none;
}




/* Section Styles ------------------------------- */

header {
  display: flex;
  justify-content: space-between;
  width: 100%;
  margin-top: 5%;
  margin-bottom: 8%;
  font-family: 'inter';
  max-width: 1440px;
  padding-left: 4%;
  padding-right: 4%;
}

.NolineLink2{
  display: none;
  visibility: hidden;
}


.paragraphSection {
  margin-bottom: 6%;
}

.wrapper {
  width: 100%;
  max-width: 1440px;
  margin: 0px auto;
  padding-left: 8%;
  padding-right: 8%;
}

.header-wrapper {
  width: 100%;
  max-width: 1440px;
  margin: 0px auto;
  padding-left: 3%;
  padding-right: 3%;
  margin-top: 5%;
}


.work {
  margin-bottom: 8%;
}

.wordsAndSpeaking {
  margin-top: 8%;
}

.big-text {
  max-width: 1000px;
}

.big-text span {
  display: block;
}

.flex-container {
  display: flex;
  width: 100%;
  flex-direction: column;
}

.second-case-study {
  margin: 50%;
}

.imgsection {
  position: relative;
}

@media (max-width: 600px) {
  .imgsection {
    margin-right: 40px;
  }
}

.paragraph {
  max-width: 760px;
}

footer {
  display: block;
  margin-top: 15%;
  margin-bottom: 5%;
  font-family: 'inter';
}














/* --------------------------- WebFonts --------------------------- */


@import url('https://rsms.me/inter/inter.css');

html {
  font-family: 'Inter', sans-serif;
}

@supports (font-variation-settings: normal) {
  html {
    font-family: 'Inter var', sans-serif;
  }
}

@font-face {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 400;
  src: url("./webfonts/Inter-Regular.woff2") format("woff2"),
    url("./webfonts/Inter-Regular.woff") format("woff");
}



/* --------------------------- MEDIA QUERYS --------------------------- */


/* --- Large Screen --- */

@media (min-width: 769px) and (max-width: 1024px) {
  h1 {
    /* background-color: purple; */
    font-size: 9vw;
  }

  .wordsAndSpeaking {
    margin-top: 8%;
    margin-bottom: 8%;
  }

}

/* --- Tablet --- */

@media (min-width: 321px) and (max-width: 768px) {
  h1 {
    /* background-color: blue; */
    font-size: 10vw;
  }

  .wordsAndSpeaking {
    margin-top: 8%;
    margin-bottom: 8%;
  }

  .header-wrapper {
    width: 100%;
    max-width: 1440px;
    margin: 0px auto;
    padding-left: 5%;
    padding-right: 5%;
    margin-top: 8%;
  }

  header a.NoLineLink:link{
    display: none;
  }

  .flex-container {
    flex-wrap: wrap;
  }


  .photo {
    max-width: 100%;
    height: auto;
  }

  .imgsection {
    margin-bottom: 8%;
  }

  .wrapper {
    width: 100%;
    max-width: 100%;
    margin: 0px auto;
    padding-left: 5%;
    padding-right: 5%;
  }


  header .nolinelink {
    display: none;
  }

  header {
    margin-top: 12%;
  }

footer {
  margin-bottom: 15%;
}

}

/* --- Mobile --- */
@media (max-width: 320px) {
  h1 {
    /* background-color: green; */
    font-size: 10vw;
  }

.header-wrapper {
  padding-left: 5%;
}

  header a.NoLineLink:link{
    display: none;
  }

  a.headertext {
  font-size: 1.2rem;
}  

a.nonlinelink2 {
  display: none;
}

.paragraphSection {
  padding-bottom: 2rem;
}

 footer {
   padding-bottom: 20%;
 }

 .subhead {
   font-size: 1.2rem
 }

  header {
    margin-top: 15%;
    padding-top: 5%;

  }

  .wordsAndSpeaking {
    margin-top: 8%;
    margin-bottom: 8%;
  }

  .flex-container {
    flex-wrap: wrap;
  }


  .photo {
    max-width: 100%;
    height: auto;
  }

  .imgsection {
    margin-bottom: 8%;
  }

  .wrapper {
    width: 100%;
    max-width: 100%;
    margin: 0px auto;
    padding-left: 5%;
    padding-right: 5%;
  }

}








/* --- To Clean--- */

/* @media only screen and (device-width : 375px) and (device-width: 320px) and (device-height : 812px) and (-webkit-device-pixel-ratio : 3) {
  .flex-container {
    flex-wrap: wrap;
  }

  h1 {
    font-size: 45px;
    line-height: 60px;
    padding-bottom: 5%;
  }

  .flex-container {
    flex-wrap: wrap;
  }


  .photo {
    max-width: 100%;
    height: auto;
  }

  .imgsection {
    margin-bottom: 8%;
  }

  .wrapper {
    width: 100%;
    max-width: 100%;
    margin: 0px auto;
    padding-left: 5%;
    padding-right: 5%;
  }

  .header-wrapper {
    width: 100%;
    max-width: 100%;
    margin: 0px auto;
    padding-left: 5%;
    padding-right: 5%;
  }

  p {
    margin-block-start: 1em;
    margin-block-end: 1em;
  }

  header .nolinelink {
    display: none;
  }

} */










/*  Media Query OLD  */


/* @media (max-width: 800px) {

  .flex-container {
    flex-wrap: wrap;
  }


  .photo {
    max-width: 100%;
    height: auto;
  }

  .imgsection {
    margin-bottom: 8%;
  }

  .wrapper {
    width: 100%;
    max-width: 100%;
    margin: 0px auto;
    padding-left: 5%;
    padding-right: 5%;
  }


  header .nolinelink {
    display: none;
  }

  header {
    margin-top: 12%;
  }

} */

